--- a/src/app/components/styles/page.css
+++ b/src/app/components/styles/page.css
@@ -1,57 +1,10 @@
 
-.background{
-  background-image: url("../../../../public/images/background.jpg");
+@media(max-width:430px){
+  .responsive-card{
+    width:20rem;
+  }
+  .responsive-image{
+    width:300px;
+  }
+
 }
-
-/* card styles */
-
-.content{
-    /* background-image: url("./images/blogheading.avif"); */
-    width:90%;
-    overflow: hidden;
-    margin:auto;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    padding:15px;
-    overflow: hidden;
-    display: flex;
-    align-content: flex-start;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    background-color: rgb(255,203,112);
-    
-    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.8);
-    border-radius: 10px;
-  }
-  
-  .card{
-    width: 15%;
-    margin: 10px;
-    height: 260px;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 1%;
-    border-radius: 10px;
-    color: white;
-    background-color: rgb(238, 44, 44);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-  }
-  .card:hover{
-    background-color:rgb(232, 87, 87) ;
-    transform:scale(1.1);
-    transition:transform 0.3s ease-in-out ;
-  }
-  .product-name{
-    font-size: 20px;
-    margin: 10px;
-  }
-  .image{
-    border: 2px solid white;
-    height:150px;
-  }
-  
