--- a/src/app/components/styles/slider.css
+++ b/src/app/components/styles/slider.css
@@ -12,9 +12,14 @@
     width:50%;
     margin: auto;
     font-size:12px;
-    color: darkgray;
+    color: white;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+@media(max-width:407px){
+    .sliderimage{
+        height: 200px;
+    }
 }
 @media(min-width:625px){
    .slider{
@@ -31,7 +36,7 @@
         width:50%;
         margin: auto;
         font-size:20px;
-        color: darkgray;
+        color: white;
         margin-top: 10px;
         
     }
@@ -56,7 +61,7 @@
     position:absolute;
     top:10%;
     right: 18%;
-    color: darkgray;
+    color: white;
     font-size: 22px;    
 }
 
