--- a/src/app/components/styles/page.css
+++ b/src/app/components/styles/page.css
@@ -1,6 +1,10 @@
 .imagecontainer::-webkit-scrollbar {
   display: none;
 }
+
+.footerSlide.active {
+     background-color: brown;
+}
   
 .responsive-image{
   outline:1px solid grey;
