--- a/src/app/components/styles/page.css
+++ b/src/app/components/styles/page.css
@@ -1,21 +1,63 @@
-.imagecontainer::-webkit-scrollbar {
+.stylecontainer::-webkit-scrollbar {
   display: none;
 }
-
 .footerSlide.active {
      background-color: brown;
 }
-  
-.responsive-image{
-  outline:1px solid grey;
+.imagecontainer{
+    border:1px solid grey;
+    width:350px;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
-@media(max-width:430px){
+.imagecontainer img{
+  border-radius: 10px;
+  width:220px;
+  height:240px;
+}
+
+.collectionimagecontainer{
+  width: 300px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  background-color:#FFEBEE;
+
+
+} 
+.collectionimagecontainer img{
+  width:272px;
+  height: 273px;
+  margin:auto;
+  margin-top: 10px;
+  border-radius: 140px;
+  text-decoration: none;
+
+  
+}
+
+@media(max-width:1113px){
+  .stylecontainer::-webkit-scrollbar {
+    display: none;
+  }
   .responsive-card{
     width:18rem;
   }
-  .responsive-image{
-    width:250px;
-   
+  
+
+}
+
+@media(max-width:1196px)
+{
+  .collection{
+    overflow-x:auto;
   }
 
 }
