--- a/src/app/blog/blog.css
+++ b/src/app/blog/blog.css
@@ -1,19 +1,20 @@
-.blog-heading{
-    width:100%;
-    height:300px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.content{
+    background-image: url("../../../public/images/background.jpg");
+    border: 2px solid black;
+    height: 100vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+}
 
-}
-.blog-heading h1{
-    color: rgb(68, 2, 2);
-    font-size: 40px;
-    font-weight: bold;
-}
-h1{
-    font-size: 25px;
-    display: flex;
+.blogging-controls{
+    background-color: grey;
     color: white;
+    position:fixed;
+    width:80%;
+    
+    bottom:10px;
+    left:8%;
+    border-radius: 10px;
 }
