creating order completion page.

--- a/src/app/paymentForm/PaymentForm.module.css
+++ b/src/app/paymentForm/PaymentForm.module.css
@@ -1,5 +1,3 @@
-/* CashOnDelivery.module.css */
-
 .container {
   margin: auto;
   padding: 20px;
@@ -33,6 +31,7 @@
 .leftAddressList {
   width: 100%;
   background-color: white;
+  word-wrap: normal;
 }
 
 .formContainer {
@@ -81,3 +80,58 @@
   border-radius: 4px;
  
  }
+
+@media(max-width:1174px){
+  .container{
+    width: 100%;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .leftContainer {
+    width: 80%;
+    box-shadow: 5px 0 10px rgba(0, 0, 0, 0.1); /* Apply box shadow to the left */
+  }
+  
+.rightContainer {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 90%;
+  margin-right: 30px;
+  border-radius: 6px;
+  box-shadow: -5px 0 10px rgba(0, 0, 0, 0.1); /* Apply box shadow to the right */
+  height: 450px;
+}
+
+ }
+
+ 
+/* Add media query for larger screens if needed */
+@media (max-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column; /* Adjust to a row layout for larger screens */
+  }
+
+  .leftContainer {
+    width: 90%;
+    box-shadow: 5px 0 10px rgba(0, 0, 0, 0.1);
+  }
+  .email{
+    width: 90%;
+  }
+
+  .rightContainer {
+    width: 90%;
+    border-radius: 6px;
+    box-shadow: -5px 0 10px rgba(0, 0, 0, 0.1);
+    height: 450px;
+  }
+}
+
