--- a/src/app/orderCompletion/OrderCompletion.css
+++ b/src/app/orderCompletion/OrderCompletion.css
@@ -36,21 +36,24 @@
     margin-top: 20px;
   }
   
-  .orderDetails {
-    margin-top: 20px;
-  }
-  
-  .orderDetails h3 {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-  
-  .orderDetails ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .orderDetails li {
-    margin-bottom: 5px;
-    font-size: 14px;
-  }
+.orderDetails {
+  margin-top: 50px;
+  background-color: green;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.orderDetails h3 {
+  color: white;
+}
+
+.orderDetails ul {
+  list-style: none;
+  padding: 0;
+}
+
+.orderDetails li {
+  margin-bottom: 10px;
+  color: white;
+  font-size: 24px;
+}
