--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -25,6 +25,13 @@
     margin-bottom: 20px;
     border-radius: 6px;
     border: 1px solid white; /* White border around the signup form */
+    position: relative;
+  }
+  .navigate{
+    position: absolute;
+    top:20px;
+    right:10px;
+
   }
   
   .form-group {
