--- a/src/app/signup/signup.module.css
+++ b/src/app/signup/signup.module.css
@@ -25,6 +25,16 @@
     margin-bottom: 20px;
     border-radius: 6px;
     border: 1px solid white; /* White border around the signup form */
+    position: relative;
+  }
+
+  .navigate{
+    position: absolute;
+    top:32px;
+    right:20px;
+    border-radius: 20px;
+    width:40px;
+
   }
   
   .form-group {
