--- a/src/app/components/styles/page.css
+++ b/src/app/components/styles/page.css
@@ -40,7 +40,7 @@
   margin-top: 10px;
   border-radius: 140px;
   text-decoration: none;
-  border: 1px solid grey;
+  border: 4px solid brown;
 }
 
 .collectionimagecontainer h5 {
