--- a/src/app/components/styles/page.css
+++ b/src/app/components/styles/page.css
@@ -61,6 +61,7 @@
 @media (max-width: 1036px) {
   .collectionimagecontainer {
     width: 220px;
+    margin-right: 20px;
   }
 
   .collectionimagecontainer img {
