--- a/src/app/components/styles/ReviewSlider.module.css
+++ b/src/app/components/styles/ReviewSlider.module.css
@@ -18,6 +18,7 @@
     justify-content: center;
     align-items: center;
     opacity: 0;
+   
   }
   
   .slide.active {
@@ -29,7 +30,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Box shadow */
     border-radius: 8px;
     padding: 20px;
-    background-color: #fff; /* White background color */
+    background-color:#f04e13; /* White background color */
     text-align: center;
     opacity: 0;
     transform: translateY(-20px);
@@ -42,9 +43,9 @@
   }
   
   .comment {
-    font-size: 22px; /* Increased text size */
+    
     margin-bottom: 10px;
-    color: #333; /* Dark text color */
+    color:  #1f1e1e; /* Dark text color */
   }
   
   .rating {
@@ -59,7 +60,7 @@
     width: 20px;
     height: 20px;
     
-    margin-right: 5px;
+    margin-left: 12px;
   }
   
   .navButtons {
