making responsive payonline page

--- a/src/app/payOnline/onlinePayment.module.css
+++ b/src/app/payOnline/onlinePayment.module.css
@@ -1,49 +1,58 @@
 /* onlinePayment.module.css */
 
 .container {
-    display: flex;
-    align-items: center;
-    height: 100vh;
-    justify-content: center;
-  }
-  
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
+}
+
+.form {
+  text-align: center;
+  background-color: #5210c5;
+  width: 90%; /* Adjusted width to make it responsive */
+  max-width: 650px; /* Added max-width to limit the width on larger screens */
+  padding: 20px; /* Added padding for better spacing */
+  border-radius: 10px;
+  box-sizing: border-box; /* Added box-sizing for better layout */
+}
+
+.heading {
+  font-size: 26px;
+  margin-top: 16px; /* Adjusted margin for better spacing */
+  color: white;
+  font-weight: bold;
+}
+
+.label {
+  color: white;
+  font-weight: bold;
+}
+
+.input {
+  background-color: white;
+  color: black;
+  width: 100%; /* Adjusted width to take 100% of the parent container */
+  height: 40px;
+  margin-top: 12px;
+  border-radius: 5px;
+  padding-left: 10px;
+  box-sizing: border-box; /* Added box-sizing for better layout */
+}
+
+.button {
+  color: black;
+  background-color: white;
+  margin-top: 12px;
+  width: 100%; /* Adjusted width to take 100% of the parent container */
+  height: 40px;
+  border-radius: 5px;
+  box-sizing: border-box; /* Added box-sizing for better layout */
+}
+
+/* Media Query for smaller screens */
+@media (max-width: 600px) {
   .form {
-    text-align: center;
-    background-color: #5210c5;
-    width: 650px;
-    height: 450px;
-    border-radius: 10px;
+    width: 90%;
   }
-  
-  .heading {
-    font-size: 26px;
-    margin-top: 32px;
-    color: white;
-    font-weight: bold;
-  }
-  
-  .label {
-    color: white;
-    font-weight: bold;
-  }
-  
-  .input {
-    background-color: white;
-    color: black;
-    width: 300px;
-    height: 40px;
-    margin-left: 32px;
-    margin-top: 12px;
-    border-radius: 5px;
-    padding-left: 10px;
-  }
-  
-  .button {
-    color: black;
-    background-color: white;
-    margin-top: 12px;
-    width: 100px;
-    height: 40px;
-    border-radius: 5px;
-  }
-  
+}
