--- a/src/app/payOnline/onlinePayment.module.css
+++ b/src/app/payOnline/onlinePayment.module.css
@@ -3,23 +3,23 @@
 .container {
   display: flex;
   align-items: center;
-  height: 100vh;
   justify-content: center;
+  height: 100vh;
 }
 
 .form {
   text-align: center;
   background-color: #5210c5;
-  width: 90%; /* Adjusted width to make it responsive */
-  max-width: 650px; /* Added max-width to limit the width on larger screens */
-  padding: 20px; /* Added padding for better spacing */
+  width: 90%;
+  max-width: 400px; /* Adjusted max-width for better responsiveness */
+  padding: 20px;
   border-radius: 10px;
-  box-sizing: border-box; /* Added box-sizing for better layout */
+  box-sizing: border-box;
 }
 
 .heading {
   font-size: 26px;
-  margin-top: 16px; /* Adjusted margin for better spacing */
+  margin-top: 16px;
   color: white;
   font-weight: bold;
 }
@@ -32,22 +32,22 @@
 .input {
   background-color: white;
   color: black;
-  width: 100%; /* Adjusted width to take 100% of the parent container */
+  width: 100%;
   height: 40px;
   margin-top: 12px;
   border-radius: 5px;
   padding-left: 10px;
-  box-sizing: border-box; /* Added box-sizing for better layout */
+  box-sizing: border-box;
 }
 
 .button {
   color: black;
   background-color: white;
   margin-top: 12px;
-  width: 100%; /* Adjusted width to take 100% of the parent container */
+  width: 100%;
   height: 40px;
   border-radius: 5px;
-  box-sizing: border-box; /* Added box-sizing for better layout */
+  box-sizing: border-box;
 }
 
 /* Media Query for smaller screens */
