--- a/src/app/payOnline/onlinePayment.module.css
+++ b/src/app/payOnline/onlinePayment.module.css
@@ -3,23 +3,21 @@
 .container {
   display: flex;
   align-items: center;
-  justify-content: center;
   height: 100vh;
+  justify-content: center;
 }
 
 .form {
   text-align: center;
   background-color: #5210c5;
-  width: 90%;
-  max-width: 400px; /* Adjusted max-width for better responsiveness */
-  padding: 20px;
+  width: 650px;
+  height: 450px;
   border-radius: 10px;
-  box-sizing: border-box;
 }
 
 .heading {
   font-size: 26px;
-  margin-top: 16px;
+  margin-top: 32px;
   color: white;
   font-weight: bold;
 }
@@ -32,27 +30,76 @@
 .input {
   background-color: white;
   color: black;
-  width: 100%;
+  width: 300px;
   height: 40px;
+  margin-left: 32px;
   margin-top: 12px;
   border-radius: 5px;
   padding-left: 10px;
-  box-sizing: border-box;
 }
 
 .button {
   color: black;
   background-color: white;
   margin-top: 12px;
-  width: 100%;
+  width: 100px;
   height: 40px;
   border-radius: 5px;
-  box-sizing: border-box;
 }
+
+
+
 
 /* Media Query for smaller screens */
 @media (max-width: 600px) {
+  
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+  
   .form {
+    text-align: center;
+    background-color: #5210c5;
     width: 90%;
+    max-width: 400px; /* Adjusted max-width for better responsiveness */
+    padding: 20px;
+    border-radius: 10px;
+    box-sizing: border-box;
+  }
+  
+  .heading {
+    font-size: 26px;
+    margin-top: 16px;
+    color: white;
+    font-weight: bold;
+  }
+  
+  .label {
+    color: white;
+    font-weight: bold;
+  }
+  
+  .input {
+    background-color: white;
+    color: black;
+    width: 100%;
+    height: 40px;
+    margin-top: 12px;
+    border-radius: 5px;
+    padding-left: 10px;
+    box-sizing: border-box;
+  }
+  
+  .button {
+    color: black;
+    background-color: white;
+    margin-top: 12px;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    box-sizing: border-box;
   }
 }
