--- a/src/app/payOnline/onlinePayment.module.css
+++ b/src/app/payOnline/onlinePayment.module.css
@@ -3,8 +3,8 @@
 .container {
   display: flex;
   align-items: center;
-  height: 100vh;
   justify-content: center;
+  height: 100vh;
 }
 
 .form {
@@ -47,59 +47,37 @@
   border-radius: 5px;
 }
 
-
-
-
 /* Media Query for smaller screens */
 @media (max-width: 600px) {
-  
   .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    height: auto;
+    padding: 20px;
   }
-  
+
   .form {
-    text-align: center;
-    background-color: #5210c5;
-    width: 90%;
-    max-width: 400px; /* Adjusted max-width for better responsiveness */
+    width: 100%;
+    max-width: 400px;
+    height: auto;
     padding: 20px;
     border-radius: 10px;
     box-sizing: border-box;
   }
-  
+
   .heading {
-    font-size: 26px;
+    font-size: 22px;
     margin-top: 16px;
-    color: white;
-    font-weight: bold;
   }
-  
+
   .label {
-    color: white;
-    font-weight: bold;
+    font-size: 16px;
   }
-  
+
   .input {
-    background-color: white;
-    color: black;
     width: 100%;
-    height: 40px;
-    margin-top: 12px;
-    border-radius: 5px;
-    padding-left: 10px;
-    box-sizing: border-box;
+    margin-left: 0;
   }
-  
+
   .button {
-    color: black;
-    background-color: white;
-    margin-top: 12px;
     width: 100%;
-    height: 40px;
-    border-radius: 5px;
-    box-sizing: border-box;
   }
 }
