--- a/src/app/payOnline/onlinePayment.module.css
+++ b/src/app/payOnline/onlinePayment.module.css
@@ -50,8 +50,10 @@
 /* Media Query for smaller screens */
 @media (max-width: 600px) {
   .container {
-    height: auto;
-    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
   }
 
   .form {
