--- a/src/app/payOnline/onlinePayment.module.css
+++ b/src/app/payOnline/onlinePayment.module.css
@@ -63,8 +63,8 @@
     padding: 20px;
     border-radius: 10px;
     box-sizing: border-box;
-    margin-Top: 40px;
-    }
+    margin-top: 40px;
+  }
 
   .heading {
     font-size: 22px;
