--- a/src/app/payOnline/onlinePayment.module.css
+++ b/src/app/payOnline/onlinePayment.module.css
@@ -61,7 +61,7 @@
     width: 100%;
     max-width: 400px;
     height: auto;
-    padding: 25px;
+    padding: 20px;
     border-radius: 10px;
     box-sizing: border-box;
     margin-top: 40px;
@@ -79,7 +79,7 @@
 
   .input {
     width: 100%;
-   
+    margin-left: 0;
   }
 
   .button {
