--- a/src/app/forgotpassword/forgotpassword.css
+++ b/src/app/forgotpassword/forgotpassword.css
@@ -2,6 +2,7 @@
 .forgot-password-form-container {
     max-width: 400px;
     margin: 0 auto;
+    margin-top: 170px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
